Oprogramowani dla panlu HMI/Moj_1/TouchGFX/output_CompileSimulator.log
Converting images
Compiling gui/src/main_screen/MainView.cpp
Compiling gui/src/main_screen/MainPresenter.cpp
Compiling generated/gui_generated/src/common/FrontendApplicationBase.cpp
Compiling gui/src/model/Model.cpp
Compiling gui/src/common/FrontendApplication.cpp
Compiling generated/fonts/src/Kerning_verdana_40_4bpp.cpp
Compiling generated/fonts/src/Font_verdana_40_4bpp.cpp
Compiling generated/fonts/src/Font_verdana_20_4bpp.cpp
Compiling generated/gui_generated/src/main_screen/MainViewBase.cpp
Compiling generated/fonts/src/FontGetters.cpp
gui/src/model/Model.cpp:3:22: fatal error: FreeRTOS.h: No such file or directory
 #include "FreeRTOS.h"
                      ^
compilation terminated.
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/model/Model.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/model/Model.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from generated/gui_generated/include/gui_generated/common/FrontendApplicationBase.hpp:8:0,
                 from gui/include/gui/common/FrontendApplication.hpp:4,
                 from gui/src/common/FrontendApplication.cpp:1:
gui/include/gui/model/Model.hpp:19:7: error: 'class Model' has virtual functions and accessible non-virtual destructor [-Werror=non-virtual-dtor]
 class Model
       ^~~~~
In file included from generated/gui_generated/include/gui_generated/common/FrontendApplicationBase.hpp:8:0,
                 from generated/gui_generated/src/common/FrontendApplicationBase.cpp:5:
gui/include/gui/model/Model.hpp:19:7: error: 'class Model' has virtual functions and accessible non-virtual destructor [-Werror=non-virtual-dtor]
 class Model
       ^~~~~
In file included from generated/gui_generated/include/gui_generated/common/FrontendApplicationBase.hpp:8:0,
                 from gui/include/gui/common/FrontendApplication.hpp:4,
                 from generated/gui_generated/include/gui_generated/main_screen/MainViewBase.hpp:7,
                 from generated/gui_generated/src/main_screen/MainViewBase.cpp:4:
gui/include/gui/model/Model.hpp:19:7: error: 'class Model' has virtual functions and accessible non-virtual destructor [-Werror=non-virtual-dtor]
 class Model
       ^~~~~
In file included from generated/gui_generated/include/gui_generated/common/FrontendApplicationBase.hpp:8:0,
                 from gui/include/gui/common/FrontendApplication.hpp:4,
                 from generated/gui_generated/include/gui_generated/main_screen/MainViewBase.hpp:7,
                 from gui/include/gui/main_screen/MainView.hpp:4,
                 from gui/src/main_screen/MainPresenter.cpp:1:
gui/include/gui/model/Model.hpp:19:7: error: 'class Model' has virtual functions and accessible non-virtual destructor [-Werror=non-virtual-dtor]
 class Model
       ^~~~~
cc1plus.exe: all warnings being treated as errors
In file included from generated/gui_generated/include/gui_generated/common/FrontendApplicationBase.hpp:8:0,
                 from gui/include/gui/common/FrontendApplication.hpp:4,
                 from generated/gui_generated/include/gui_generated/main_screen/MainViewBase.hpp:7,
                 from gui/include/gui/main_screen/MainView.hpp:4,
                 from gui/src/main_screen/MainView.cpp:1:
gui/include/gui/model/Model.hpp:19:7: error: 'class Model' has virtual functions and accessible non-virtual destructor [-Werror=non-virtual-dtor]
 class Model
       ^~~~~
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/common/FrontendApplication.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/common/FrontendApplication.o] Error 1
cc1plus.exe: all warnings being treated as errors
cc1plus.exe: all warnings being treated as errors
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/main_screen/MainPresenter.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/main_screen/MainPresenter.o] Error 1
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/generated/gui_generated/src/common/FrontendApplicationBase.o' failed
make[2]: *** [build/MINGW32_NT-6.2/generated/gui_generated/src/common/FrontendApplicationBase.o] Error 1
cc1plus.exe: all warnings being treated as errors
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/main_screen/MainView.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/main_screen/MainView.o] Error 1
cc1plus.exe: all warnings being treated as errors
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/generated/gui_generated/src/main_screen/MainViewBase.o' failed
make[2]: *** [build/MINGW32_NT-6.2/generated/gui_generated/src/main_screen/MainViewBase.o] Error 1
simulator/gcc/Makefile:182: recipe for target 'generate_assets' failed
make[1]: *** [generate_assets] Error 2
simulator/gcc/Makefile:40: recipe for target 'all' failed
make: *** [all] Error 2
